--- a/action.yml
+++ b/action.yml
@@ -24,11 +24,14 @@ runs:
     - name: Install Snaplet CLI
       shell: bash
       run: curl -sS "https://app.snaplet.dev/get-cli/" | bash &> "/dev/null"
-    - name: List pg dump version
+    - name: Install postgres 15
       shell: bash
       run: |
-        psql --version
-        pg_dump --version
+        sudo sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt $(lsb_release -cs)-pgdg main" > /etc/apt/sources.list.d/pgdg.list'
+        wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | sudo tee /etc/apt/trusted.gpg.d/pgdg.asc &>/dev/null
+        sudo apt update
+        sudo apt-get install postgresql-client-15 -y
+        sudo pg_dropcluster 14 main --stop
     - name: Capture a snapshot
       shell: bash
       run: snaplet snapshot capture ${{ inputs.destination-path }} --tags ${{ inputs.tags }}
