--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,7 @@ inputs:
     description: Skip the share step
     required: false
     type: boolean
+    default: true
 
 runs:
   using: composite
@@ -34,7 +35,12 @@ runs:
         sudo pg_dropcluster 14 main --stop
     - name: Capture a snapshot
       shell: bash
-      run: snaplet snapshot capture ${{ inputs.destination-path }} --tags ${{ inputs.tags }}
+      run: |
+        if [[ -n "${inputs.tags}"]]; then
+          snaplet snapshot capture ${{ inputs.destination-path }} --tags ${{ inputs.tags }}
+        else
+          snaplet snapshot capture ${{ inputs.destination-path }}
+        fi
     - name: Share snapshot
       if: ${{ inputs.skip-share == false }}
       shell: bash
