--- a/action.yml
+++ b/action.yml
@@ -36,11 +36,11 @@ runs:
     - name: Capture a snapshot
       shell: bash
       run: |
-        if [[ -n "${inputs.tags}"]] 
+        if [[ -n "${inputs.tags}" ]]
         then
-          snaplet snapshot capture ${{ inputs.destination-path }} --tags ${{ inputs.tags }}
+          snaplet snapshot capture "${{ inputs.destination-path }}" --tags "${{ inputs.tags }}"
         else
-          snaplet snapshot capture ${{ inputs.destination-path }}
+          snaplet snapshot capture "${{ inputs.destination-path }}"
         fi
     - name: Share snapshot
       if: ${{ inputs.skip-share == false }}
