--- a/action.yml
+++ b/action.yml
@@ -17,7 +17,7 @@ inputs:
     description: Skip the share step
     required: false
     type: boolean
-    default: true
+    default: false
 
 runs:
   using: composite
@@ -36,7 +36,7 @@ runs:
     - name: Capture a snapshot
       shell: bash
       run: |
-        if [[ -n "${inputs.tags}" ]]; then
+        if [[ -n "${{ inputs.tags }}" ]]; then
           snaplet snapshot capture "${{ inputs.destination-path }}" --tags "${{ inputs.tags }}"
         else
           snaplet snapshot capture "${{ inputs.destination-path }}"
